fixed IDEA and Sonar Issues